--- a/index.html
+++ b/index.html
@@ -15,20 +15,57 @@
 		<!-- Page Title -->
 		<title>Memory Vault</title>
 		<!-- jQuery Call -->
-		<link href='css/lib/jquery' rel='stylesheet' type='text/css' />
-		<link href='css/lib/jquery.mobile.theme-1.3.1.min.css' rel='stylesheet' type='text/css' />
+		<link href="css/lib/jquery.mobile-1.3.1.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/lib/jquery.mobile.theme-1.3.1.min.css" rel="stylesheet" type="text/css" />
 		<!-- CSS Call -->
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
-		
+		<div data-role="page" id="home">
+			<!-- Navigation Side Panel -->
+			<div data-role="panel" data-position="left" id="nav">
+				<h2>Main Nav</h2>
+			</div><!-- /Navigation side panel -->
+			<!-- Add Item Panel -->
+			<div data-role="panel" data-position="right" id="addItem">
+				<h2>Add Item Form</h2>
+			</div><!-- /Add Item Panel -->
+			<!-- Header -->
+			<div data-role="header" data-position="fixed">
+					<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
+			</div> <!-- /Header -->
+			<div data-role="content">
+				<button type="button"><a href="#nav"></a></button><a href="#addItem">Add new mem</a>
+				<!-- Feature -->
+				<div data-inset="true">
+						<a href="#addItem" data-transition="slide"><img src="images/CTA.jpg"></a>
+				</div> <!-- /Feature -->
 
+				<!-- Search -->
+				<div>
+					<input type="search" id="search" value="" placeholder="Search" data-filter="true">
+				</div> <!-- End of Search -->
+				<!-- Browse Memories -->
+				<div>
+					<h2>Browse Memories by:</h2>
+					<ul class="browse" data-role="listview" data-inset="true">
+						<li><a href="search.html" data-ajax="false">Occasion</a></li>
+						<li><a href="search.html" data-ajax="false">Date</a></li>
+						<li><a href="search.html" data-ajax="false">Importance</a></li>
+						<li><a href="search.html" data-ajax="false">Mood</a></li>
+						<li><a href="search.html" data-ajax="false">Shared With</a></li>
+					</ul>
+				</div><!-- /Browse Memories -->
 
+		</div>
+
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 		<!-- jQuery js call -->
-		<script src="js/lib/jquery-2.0.2.min.js" type="text/javascript"></script>
-		<script src='js/lib/jquery.mobile-1.3.1.min.js' type='text/javascript'></script>
-		<!-- ja Call -->
+		<!-- // <script src="js/lib/jquery-2.0.2.min.js" type="text/javascript"></script> -->
+		<!-- // <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
+		<!-- js Call -->
 		<script src="js/main.js" type="text/javascript"></script>
 	</body>
 
