--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<!--Eric Garcia
 		1306 SDI
-		2013-6-3 -->
+		Prject 2 -->
 
 		<!-- Character Set Meta -->
 		<meta charset="utf-8">
@@ -11,19 +11,136 @@
 		<meta name="keyword" content="html5, web app, Full Sail, ASD" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="width=divice-width, initial-scale=1.0"/>
-		<meta name="viewport" content="target-densitydpi=device-dpi" />
 		<!-- Page Title -->
 		<title>Memory Vault</title>
 		<!-- jQuery Call -->
-		<link href="css/lib/jquery.mobile-1.3.1.min.css" rel="stylesheet" type="text/css" />
-		<link href="css/lib/jquery.mobile.theme-1.3.1.min.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+		<!-- For some reason my local files are not loading properly -->
+		<!-- <link rel="stylesheet" href="css/lib/jquery.mobile-1.3.1.min.css" type='text/css' /> -->
+		<!-- <link rel="stylesheet" href="css/lib/jqudery.mobile.theme-1.3.1.min.css" type='text/css' /> -->
 		<!-- CSS Call -->
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
-		<div data-role="page" id="home">
+		<article data-role="page" id="home">
 
+			<!-- Navigation Side Panel -->
+			<div data-role="panel" data-position="left" id="nav">
+				<ul>
+					<li><a href="#home" data-icon="home" data-role="button" data-transition="slide">Home</a></li>
+					<li><a href="#addItem" data-icon="plus" data-role="button" data-transition="slide">Memory</a></li>
+					<li><a href="#recentMem" id='loadRecent' data-icon="bars" data-role="button" data-transition="slide">Recent</a></li>
+					<li><a href="#aboutUs" data-icon="info" data-role="button" data-transition="slide">About</a></li>
+				</ul>
+			</div><!-- /Navigation Side Panel -->
+
+			<!-- Add Item Panel -->
+			<div data-role="panel" data-position="right" id="addItem">
+				<h2>Add Item Form</h2>
+				<!-- Form -->
+				<form action="" method="post" id="newMemForm">
+					<!-- Form Elements -->
+					<!-- Occasion -->
+					<div data-role="fieldcontain">
+						<label for="occasion">Occasion*</label>
+						<input type="text" name="occasion" id="occasion" title="The name of the event goes here" placeholder="Name of event" class="required" />
+					</div><!-- /Occasion -->
+					<!-- Date -->
+					<div data-role=fieldcontain>
+						<label for="date">Date*</label>
+						<input type="date" name="date" id="date" data-native-menu="false" />
+						<!-- <p>Date format goes here</p> -->
+					</div><!-- /Date -->
+					<!-- Important -->
+					<div data-role="fieldcontain">
+			            <label for="importance">Important</label>
+			            <select data-role="slider" name="importance" title="Was this event important?" id="importance">
+			                <option value="no">No</option>
+			                <option value="yes">Yes</option>
+			            </select>
+			        </div><!-- /Important -->
+					<!-- Mood -->
+					<div data-role="fieldcontain">
+						<label for="mood">Mood of even*</label>
+						<select name="mood" id="mood" data-native-menu="false" title="Set the mood of the event" class="required" value="">
+							<option value="">--Mood?--</option>
+							<option value="fun">Fun</option>
+							<option value="memorable">Memorable</option>
+							<option vlaue="sad">Sad</option>
+						</select>
+					</div><!-- /Mood -->
+					<!-- Shared With -->
+					<div data-role="fieldcontain">
+						<label for="sharedwith" class="select">Shared With</label>
+						<select name="sharedWith" id="sharedWith" multiple="multiple" data-native-menu="false">
+							<option>--With?--</option>
+							<optgroup label="Family">
+								<option value="Family" id="family">Family</option>
+								<option value="Significant Other" id="significantOther">Significant Other</option>
+								<option value="Self" id="self">Self</option>
+							</optgroup>
+							<optgroup label="Others">
+								<option value="Co-Workers" id="co-workers">Co-Workers</option>
+								<option value="Friends" id="friends">Friends</option>
+								<option value="Other" id="other">Other</option>
+							</optgroup>
+						</select>
+					</div><!-- /Shared With -->
+					<!-- Notes -->
+					<div data-role="fieldcontain">
+						<label for="notes">Notes</label>
+						<textarea name="notes" id="notes" placeholder="Describe this occasion here..."></textarea>
+					</div><!-- /Notes -->
+					<div data-type="fieldcontain">
+						<label for="photo">Photos</label>
+						<input type="file" name="photo" id="photo" value="">
+					</div>
+					<!-- Submit Buttons -->
+					<div data-role="fieldcontain">
+						<div><input id='saveBtn' type="submit" value="Save memory" data-icon="check" data-iconpos="right" data-theme="c"></div>
+					</div><!-- /Submit Button -->
+					<div data-role="fieldcontain">
+						<div><input type="reset" data-mini="true" value="Reset form" data-icon="delete" data-iconpos="right"></div>
+					</div><!-- /Reset Button -->
+					<a href="#addItemErrors" id="errorLink" data-rel="dialog" data-transition="pop">Errors</a>
+				</form> <!-- /Form -->
+			</div><!-- /Add Item Panel -->
+
+			<!-- Header -->
+			<header data-role="header" data-position="fixed">
+				<a href="#nav" data-icon="bars" >Menu</a>
+				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
+				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
+			</header> <!-- /Header -->
+			<!-- Content -->
+			<section data-role="content">
+				<!-- Feature -->
+				<div data-inset="true">
+						<a href="#addItem" data-transition="slide"><img src="images/CTA.jpg"></a>
+				</div> <!-- /Feature -->
+
+				<!-- Search -->
+				<div>
+					<input type="search" id="search" value="" placeholder="Search" data-filter="true">
+				</div> <!-- End of Search -->
+				<!-- Browse Memories -->
+				<div>
+					<h2>Browse Memories by:</h2>
+					<ul class="browse" data-role="listview" data-inset="true">
+						<li><a href="search.html" data-ajax="false">Occasion</a></li>
+						<li><a href="search.html" data-ajax="false">Date</a></li>
+						<li><a href="search.html" data-ajax="false">Importance</a></li>
+						<li><a href="search.html" data-ajax="false">Mood</a></li>
+						<li><a href="search.html" data-ajax="false">Shared With</a></li>
+					</ul>
+				</div><!-- /Browse Memories -->
+			</sections><!-- /Content -->
+		</article><!-- /Home -->
+
+
+		<!-- Recent Memories -->
+		<article data-role="page" id="recentMem" >
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
 				<ul>
@@ -97,7 +214,7 @@
 					</div>
 					<!-- Submit Buttons -->
 					<div data-role="fieldcontain">
-						<div><input type="submit" value="Save memory" data-icon="check" data-iconpos="right" data-theme="c"></div>
+						<div><input id='saveBtn' type="submit" value="Save memory" data-icon="check" data-iconpos="right" data-theme="c"></div>
 					</div><!-- /Submit Button -->
 					<div data-role="fieldcontain">
 						<div><input type="reset" data-mini="true" value="Reset form" data-icon="delete" data-iconpos="right"></div>
@@ -107,41 +224,68 @@
 			</div><!-- /Add Item Panel -->
 
 			<!-- Header -->
-			<div data-role="header" data-position="fixed">
+			<header data-role="header" data-position="fixed">
 				<a href="#nav" data-icon="bars" >Menu</a>
 				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
-			</div> <!-- /Header -->
+			</header> <!-- /Header -->
 
+			<!-- Page content -->
 			<div data-role="content">
-				<!-- Feature -->
-				<div data-inset="true">
-						<a href="#addItem" data-transition="slide"><img src="images/CTA.jpg"></a>
-				</div> <!-- /Feature -->
+				<!-- Control Group -->
+				<div data-role="controlgroup" data-type="horizontal">
+				    <a href="#" id="clearSavedData" data-role="button">Erase All Memories</a>
+				</div><!-- /Control Group -->
+				<h2>Tap memory to edit</h2>
+				<!-- List of Memories -->
+				<ul data-role="listview" data-split-icon="delete" id="recentMemList" data-inset="true" data-filter="true" data-filter-placeholder="Search memories...">
+				    <li><a href="#addItem" data-transition="slide" data-icon="edit">
+				        <img src="images/Fun.png">
+				        <h2>Started School</h2>
+				        <p>October 25, 2012</p>
+				        <p>MDVBS is awesome!!</p></a>
+				        <a href="#deleteMem" data-rel="popup" data-position-to="window" data-transition="pop">Delete Memory</a>
+				    </li>
+				    <li><a href="#addItem" data-transition="slide">
+				        <img src="images/Memorable.png">
+				        <h2>Noah was born</h2>
+				        <p>December 20, 2011</p>
+				        <p>Life changing</p></a>
+				        <a href="#deleteMem" data-rel="popup" data-position-to="window" data-transition="pop">Delete Memory</a>
+				    </li>
+				    <li><a href="#addItem" data-transition="slide">
+				        <img src="images/Fun.png">
+				        <h2>Graduated High School</h2>
+				        <p>May 24, 2005</p>
+				        <p>Had a blast!!!!!!</p></a>
+				        <a href="#deleteMem" data-rel="popup" data-position-to="window" data-transition="pop">Delete Memory</a>
+				    </li>
+				    <li><a href="#addItem" data-transition="slide">
+				        <img src="images/Sad.png">
+				        <h2>September 11th</h2>
+				        <p>September 11, 2001</p>
+				        <p>Unbelievable tragedy</p></a>
+				        <a href="#deleteMem" data-rel="popup" data-position-to="window" data-transition="pop">Delete Memory</a>
+				    </li>
+				</ul><!-- /List of Memories -->
+				<!-- Delete Individual Memory Button -->
+				<div data-role="popup" id="deleteMem" data-theme="b" data-overlay-theme="b" class="ui-content" style="max-width:340px; padding-bottom:2em;">
+				    <h3>Delete Memory?</h3>
+				    <p>This will completely remove this memory?</p>
+				    <a href="#recentMem" data-role="button" data-rel="back" data-theme="a" data-icon="delete" data-inline="true" data-mini="true">Delete Memory</a>
+				    <a href="#recentMem" data-role="button" data-rel="back" data-inline="true" data-mini="true">Cancel</a>
+				</div><!-- /Delete Individual Memory Button -->
+			</div> <!-- /Content -->
 
-				<!-- Search -->
-				<div>
-					<input type="search" id="search" value="" placeholder="Search" data-filter="true">
-				</div> <!-- End of Search -->
-				<!-- Browse Memories -->
-				<div>
-					<h2>Browse Memories by:</h2>
-					<ul class="browse" data-role="listview" data-inset="true">
-						<li><a href="search.html" data-ajax="false">Occasion</a></li>
-						<li><a href="search.html" data-ajax="false">Date</a></li>
-						<li><a href="search.html" data-ajax="false">Importance</a></li>
-						<li><a href="search.html" data-ajax="false">Mood</a></li>
-						<li><a href="search.html" data-ajax="false">Shared With</a></li>
-					</ul>
-				</div><!-- /Browse Memories -->
+		</article> <!-- /Recent Memories -->
 
-		</div>
 
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 		<!-- jQuery js call -->
-		<!-- // <script src="js/lib/jquery-2.0.2.min.js" type="text/javascript"></script> -->
-		<!-- // <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
+		<!-- Not sure why the local libraries are not loading?!?! -->
+		<!-- <script src="js/lib/jquery-2.0.2.js" type="text/javascript"></script> -->
+		<!-- <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
 		<!-- js Call -->
 		<script src="js/main.js" type="text/javascript"></script>
 	</body>
