--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
 		<!-- Character Set Meta -->
 		<meta charset="utf-8">
-		<meta name="discription" content="My first web app using HTML5" />
+		<meta name="discription" content="Mobile app using jQuery" />
 		<meta name="keyword" content="html5, web app, Full Sail, ASD" />
 		<meta name="robots" content="index, follow" />
-		<!-- <meta name="viewport" content="width=divice-width, initial-scale=1.0"/> -->
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Page Title -->
 		<title>Memory Vault</title>
 		<!-- jQuery Call -->
@@ -23,7 +24,7 @@
 	</head>
 
 	<body>
-		<article data-role="page" id="home">
+		<section data-role="page" id="home">
 
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
@@ -42,7 +43,7 @@
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
 			</header> <!-- /Header -->
 			<!-- Content -->
-			<section data-role="content">
+			<article data-role="content">
 				<!-- Feature -->
 				<div data-inset="true">
 						<a href="#addItem" data-transition="slide"><img src="images/CTA.jpg"></a>
@@ -63,11 +64,11 @@
 						<li><a href="search.html" data-ajax="false">Shared With</a></li>
 					</ul>
 				</div><!-- /Browse Memories -->
-			</sections><!-- /Content -->
-		</article><!-- /Home -->
+			</article><!-- /Content -->
+		</section><!-- /Home -->
 
 		<!-- Add Item Page -->
-		<article data-role="page" id="addItem">
+		<section data-role="page" id="addItem">
 
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
@@ -87,10 +88,10 @@
 			</header> <!-- /Header -->
 
 			<!-- Content -->
-			<section data-role='content'>
+			<article data-role='content'>
 				<h2>Add Item Form</h2>
 				<!-- Form -->
-				<form action="" method="post" id="newMemForm">
+				<form action="#addItem" method="post" id="newMemForm">
 					<!-- Form Elements -->
 					<!-- Occasion -->
 					<div data-role="fieldcontain">
@@ -157,13 +158,12 @@
 					</div><!-- /Reset Button -->
 					<a href="#addItemErrors" id="errorLink" data-rel="dialog" data-transition="pop">Errors</a>
 				</form> <!-- /Form -->
-			</section><!-- /Content -->
-		</article><!-- /Add Item Page -->
-
-
-
+			</article><!-- /Content -->
+		</section><!-- /Add Item Page -->
+		
+		
 		<!-- Recent Memories -->
-		<article data-role="page" id="recentMem" >
+		<section data-role="page" id="recentMem" >
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
 				<ul>
@@ -182,10 +182,13 @@
 			</header> <!-- /Header -->
 
 			<!-- Page content -->
-			<div data-role="content">
+			<article data-role="content">
 				<!-- Control Group -->
-				<div data-role="controlgroup" data-type="horizontal">
-				    <a href="#" id="clearSavedData" data-role="button">Erase All Memories</a>
+				<div data-role="navbar" data-type="horizontal">
+					<ul>
+						<li><a href="#" id="loadMem" data-role="button">Load Memories</a></li>
+					    <li><a href="#" id="clearSavedData" data-role="button">Erase All Memories</a></li>
+					</ul>
 				</div><!-- /Control Group -->
 				<h2>Tap memory to edit</h2>
 				<!-- List of Memories -->
@@ -226,12 +229,12 @@
 				    <a href="#recentMem" data-role="button" data-rel="back" data-theme="a" data-icon="delete" data-inline="true" data-mini="true">Delete Memory</a>
 				    <a href="#recentMem" data-role="button" data-rel="back" data-inline="true" data-mini="true">Cancel</a>
 				</div><!-- /Delete Individual Memory Button -->
-			</div> <!-- /Content -->
-		</article> <!-- /Recent Memories -->
-
-
+			</article> <!-- /Content -->
+		</section> <!-- /Recent Memories -->
+		
+		
 		<!-- About -->
-		<article data-role-"page" id="aboutUs">
+		<section data-role-"page" id="aboutUs">
 
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
@@ -251,7 +254,7 @@
 			</header> <!-- /Header -->
 
 			<!-- Content -->
-			<section data-role="content">
+			<article data-role="content">
 				<ul data-role="listview" data-inset="true">
 				    <li><a href="https://eng618.github.com/Garcia_Eric_MIU/Bronze" data-ajax='false'>Bronze gh-pages</a></li>
 				    <li><a href="https://eng618.github.com/Garcia_Eric_MIU/Gold" data-ajax='false'>Gold gh-pages</a></li>
@@ -260,7 +263,7 @@
 				</ul>
 				<!-- Collapsible Set -->
 				<div data-role="collapsible-set">
-					
+
 					<!-- About Author -->
 					<div data-role="collapsible" data-theme="b" data-content-theme="c" >
 					    <h2>Find me on</h2>
@@ -281,27 +284,27 @@
 					    </ul>
 					</div> <!-- /Credits -->
 				</div><!-- /Collapsible Set -->
-			</section> <!-- /Content -->
-		</article> <!-- /About -->
+			</article> <!-- /Content -->
+		</section> <!-- /About -->
+		
 
 		<!-- Error Page -->
-		<article data-role="dialog" id="addItemErrors">
+		<section data-role="dialog" id="addItemErrors">
 			<!-- Header -->
 			<header data-role="header" data-position="fixed">
 				<h1>Errors</h1>
 			</header> <!-- /Header -->
 			<!-- Content -->
-			<section data-role="content">
+			<article data-role="content">
 				<ul>
 					<li>Occasion</li>
 					<li>Date</li>
 					<li>Mood of Event</li>
 				</ul>
-			</section> <!-- /Content -->
-		</article> <!-- /Error Page -->
-
-
-
+			</article> <!-- /Content -->
+		</section> <!-- /Error Page -->
+		
+		
 		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 		<!-- jQuery js call -->
