--- a/index.html
+++ b/index.html
@@ -91,19 +91,21 @@
 			<article data-role='content'>
 				<h2>Add Item Form</h2>
 				<!-- Form -->
-				<form action="#addItem" method="post" id="newMemForm">
+				<form action="#" method="post" id="newMemForm">
 					<!-- Form Elements -->
 					<!-- Occasion -->
 					<div data-role="fieldcontain">
 						<label for="occasion">Occasion*</label>
 						<input type="text" name="occasion" id="occasion" title="The name of the event goes here" placeholder="Name of event" class="required" />
 					</div><!-- /Occasion -->
+
 					<!-- Date -->
 					<div data-role=fieldcontain>
 						<label for="date">Date*</label>
 						<input type="date" name="date" id="date" data-native-menu="false" />
 						<!-- <p>Date format goes here</p> -->
 					</div><!-- /Date -->
+
 					<!-- Important -->
 					<div data-role="fieldcontain">
 			            <label for="importance">Important</label>
@@ -112,6 +114,7 @@
 			                <option value="yes">Yes</option>
 			            </select>
 			        </div><!-- /Important -->
+
 					<!-- Mood -->
 					<div data-role="fieldcontain">
 						<label for="mood">Mood of event*</label>
@@ -122,6 +125,7 @@
 							<option vlaue="sad">Sad</option>
 						</select>
 					</div><!-- /Mood -->
+
 					<!-- Shared With -->
 					<div data-role="fieldcontain">
 						<label for="sharedWith" class="select">Shared With</label>
@@ -139,23 +143,28 @@
 							</optgroup>
 						</select>
 					</div><!-- /Shared With -->
+
 					<!-- Notes -->
 					<div data-role="fieldcontain">
 						<label for="notes">Notes</label>
 						<textarea name="notes" id="notes" placeholder="Describe this occasion here..."></textarea>
 					</div><!-- /Notes -->
+
 					<!-- Photo upload -->
 					<div data-type="fieldcontain">
 						<label for="photo">Photos</label>
 						<input type="file" name="photo" id="photo" value="">
 					</div><!-- /Photo upload -->
+
 					<!-- Submit Buttons -->
 					<div data-role="fieldcontain">
 						<div><input id='saveBtn' type="submit" value="Save memory" data-icon="check" data-iconpos="right" data-theme="c"></div>
 					</div><!-- /Submit Button -->
+
 					<div data-role="fieldcontain">
 						<div><input type="reset" data-mini="true" value="Reset form" data-icon="delete" data-iconpos="right"></div>
 					</div><!-- /Reset Button -->
+
 					<a href="#addItemErrors" id="errorLink" data-rel="dialog" data-transition="pop">Errors</a>
 				</form> <!-- /Form -->
 			</article><!-- /Content -->
@@ -164,6 +173,7 @@
 		
 		<!-- Recent Memories -->
 		<section data-role="page" id="recentMem" >
+			
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
 				<ul>
