--- a/index.html
+++ b/index.html
@@ -127,22 +127,22 @@
 					</div><!-- /Mood -->
 
 					<!-- Shared With -->
-					<div data-role="fieldcontain">
-						<label for="sharedWith" class="select">Shared With</label>
-						<select name="sharedWith" id="sharedWith" multiple="multiple" data-native-menu="false">
-							<option>--With?--</option>
-							<optgroup label="Family">
-								<option value="Family" id="family">Family</option>
-								<option value="Significant Other" id="significantOther">Significant Other</option>
-								<option value="Self" id="self">Self</option>
-							</optgroup>
-							<optgroup label="Others">
-								<option value="Co-Workers" id="co-workers">Co-Workers</option>
-								<option value="Friends" id="friends">Friends</option>
-								<option value="Other" id="other">Other</option>
-							</optgroup>
-						</select>
-					</div><!-- /Shared With -->
+					<!-- <div data-role="fieldcontain"> -->
+						<!-- <label for="sharedWith" class="select">Shared With</label> -->
+						<!-- <select name="sharedWith" id="sharedWith" multiple="multiple" data-native-menu="false"> -->
+							<!-- <option>--With?--</option> -->
+							<!-- <optgroup label="Family"> -->
+								<!-- <option value="Family" id="family" name='with'>Family</option> -->
+								<!-- <option value="Significant Other" id="significantOther" name='with'>Significant Other</option> -->
+								<!-- <option value="Self" id="self" name='with'>Self</option> -->
+							<!-- </optgroup> -->
+							<!-- <optgroup label="Others"> -->
+								<!-- <option value="Co-Workers" id="co-workers" name='with'>Co-Workers</option> -->
+								<!-- <option value="Friends" id="friends" name='with'>Friends</option> -->
+								<!-- <option value="Other" id="other" name='with'>Other</option> -->
+							<!-- </optgroup> -->
+						<!-- </select> -->
+					<!-- </div> --><!-- /Shared With -->
 
 					<!-- Notes -->
 					<div data-role="fieldcontain">
@@ -151,10 +151,11 @@
 					</div><!-- /Notes -->
 
 					<!-- Photo upload -->
-					<div data-type="fieldcontain">
-						<label for="photo">Photos</label>
-						<input type="file" name="photo" id="photo" value="">
-					</div><!-- /Photo upload -->
+					<!-- Will add this functionality in the future -->
+					<!-- <div data-type="fieldcontain"> -->
+						<!-- <label for="photo">Photos</label> -->
+						<!-- <input type="file" name="photo" id="photo" value=""> -->
+					<!-- </div> --><!-- /Photo upload -->
 
 					<!-- Submit Buttons -->
 					<div data-role="fieldcontain">
@@ -196,7 +197,8 @@
 				<!-- Control Group -->
 				<div data-role="navbar" data-type="horizontal">
 					<ul>
-						<li><a href="#" id="loadMem" data-role="button">Load Memories</a></li>
+						<li><a href="#" id="loadJSON" data-role="button">Load JSON</a></li>
+						<li><a href="#" id="loadXML" data-role="button">Load XML</a></li>
 					    <li><a href="#" id="clearSavedData" data-role="button">Erase All Memories</a></li>
 					</ul>
 				</div><!-- /Control Group -->
@@ -315,14 +317,16 @@
 		</section> <!-- /Error Page -->
 		
 		
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+		<script src='http://code.jquery.com/jquery-1.10.1.min.js'></script>
+		<script src='http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js'></script>
 		<!-- jQuery js call -->
 		<!-- Not sure why the local libraries are not loading?!?! -->
 		<!-- <script src="js/lib/jquery-2.0.2.js" type="text/javascript"></script> -->
 		<!-- <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
+		<!-- <script src='js/lib/jquery.validate.min.js' type='text/javascript'></script> -->
 		<!-- js Call -->
-		<script src="js/main.js" type="text/javascript"></script>
+		<!-- <script src='js/json.js' type='text/javascript'></script> -->
+		<script src='js/main.js' type='text/javascript'></script>
 	</body>
 
 </html>
