corrected JSON data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<!--Eric Garcia
 		1306 SDI
-		Prject 2 -->
+		Prject 3 -->
 
 		<!-- Character Set Meta -->
 		<meta charset="utf-8">
@@ -197,6 +197,7 @@
 				<!-- Control Group -->
 				<div data-role="navbar" data-type="horizontal">
 					<ul>
+						<li><a href="#" id="loadLocal" data-role="button">Load Memory</a></li>
 						<li><a href="#" id="loadJSON" data-role="button">Load JSON</a></li>
 						<li><a href="#" id="loadXML" data-role="button">Load XML</a></li>
 					    <li><a href="#" id="clearSavedData" data-role="button">Erase All Memories</a></li>
