--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
 			</header> <!-- /Header -->
+
 			<!-- Content -->
 			<article data-role="content">
+
 				<!-- Feature -->
 				<div data-inset="true">
 						<a href="#addItem" data-transition="slide"><img src="images/CTA.jpg"></a>
@@ -53,6 +55,7 @@
 				<div>
 					<input type="search" id="search" value="" placeholder="Search" data-filter="true">
 				</div> <!-- End of Search -->
+
 				<!-- Browse Memories -->
 				<div>
 					<h2>Browse Memories by:</h2>
@@ -65,6 +68,7 @@
 					</ul>
 				</div><!-- /Browse Memories -->
 			</article><!-- /Content -->
+
 		</section><!-- /Home -->
 
 		<!-- Add Item Page -->
@@ -169,6 +173,7 @@
 					<a href="#addItemErrors" id="errorLink" data-rel="dialog" data-transition="pop">Errors</a>
 				</form> <!-- /Form -->
 			</article><!-- /Content -->
+			
 		</section><!-- /Add Item Page -->
 		
 		
@@ -239,7 +244,7 @@
 				<div data-role="popup" id="deleteMem" data-theme="b" data-overlay-theme="b" class="ui-content" style="max-width:340px; padding-bottom:2em;">
 				    <h3>Delete Memory?</h3>
 				    <p>This will completely remove this memory?</p>
-				    <a href="#recentMem" data-role="button" data-rel="back" data-theme="a" data-icon="delete" data-inline="true" data-mini="true">Delete Memory</a>
+				    <a href="#recentMem" data-role="button" data-rel="back" id="popDelete" data-theme="a" data-icon="delete" data-inline="true" data-mini="true">Delete Memory</a>
 				    <a href="#recentMem" data-role="button" data-rel="back" data-inline="true" data-mini="true">Cancel</a>
 				</div><!-- /Delete Individual Memory Button -->
 			</article> <!-- /Content -->
@@ -298,6 +303,7 @@
 					</div> <!-- /Credits -->
 				</div><!-- /Collapsible Set -->
 			</article> <!-- /Content -->
+		
 		</section> <!-- /About -->
 		
 
@@ -315,6 +321,7 @@
 					<li>Mood of Event</li>
 				</ul>
 			</article> <!-- /Content -->
+		
 		</section> <!-- /Error Page -->
 		
 		
@@ -326,7 +333,7 @@
 		<!-- <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
 		<!-- <script src='js/lib/jquery.validate.min.js' type='text/javascript'></script> -->
 		<!-- js Call -->
-		<!-- <script src='js/json.js' type='text/javascript'></script> -->
+		<script src='js/json.js' type='text/javascript'></script>
 		<script src='js/main.js' type='text/javascript'></script>
 	</body>
 
