--- a/Memory-Vault/app/_attachments/index.html
+++ b/Memory-Vault/app/_attachments/index.html
@@ -39,7 +39,7 @@
 			<!-- Header -->
 			<header data-role="header" data-position="fixed">
 				<a href="#nav" data-icon="bars" >Menu</a>
-				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
+				<h1><img src="Memory-Vault-logo_rev1.png"></h1>
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
 			</header> <!-- /Header -->
 
@@ -48,7 +48,7 @@
 
 				<!-- Feature -->
 				<div data-inset="true">
-						<a href="#addItem" data-transition="slide"><img src="images/CTA.jpg"></a>
+						<a href="#addItem" data-transition="slide"><img src="CTA.jpg"></a>
 				</div> <!-- /Feature -->
 
 				<!-- Search -->
@@ -87,7 +87,7 @@
 			<!-- Header -->
 			<header data-role="header" data-position="fixed">
 				<a href="#nav" data-icon="bars" >Menu</a>
-				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
+				<h1><img src="Memory-Vault-logo_rev1.png"></h1>
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
 			</header> <!-- /Header -->
 
@@ -193,7 +193,7 @@
 			<!-- Header -->
 			<header data-role="header" data-position="fixed">
 				<a href="#nav" data-icon="bars" >Menu</a>
-				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
+				<h1><img src="Memory-Vault-logo_rev1.png"></h1>
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
 			</header> <!-- /Header -->
 
@@ -242,7 +242,7 @@
 			<!-- Header -->
 			<header data-role="header" data-position="fixed">
 				<a href="#nav" data-icon="bars" >Menu</a>
-				<h1><img src="images/Memory-Vault-logo_rev1.png"></h1>
+				<h1><img src="Memory-Vault-logo_rev1.png"></h1>
 				<a href="#addItem" data-icon="plus" class="ui-btn-right" >New</a>
 			</header> <!-- /Header -->
 
@@ -308,8 +308,8 @@
 		<!-- <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
 		<!-- <script src='js/lib/jquery.validate.min.js' type='text/javascript'></script> -->
 		<!-- js Call -->
-		<script src='js/json.js' type='text/javascript'></script>
-		<script src='js/main.js' type='text/javascript'></script>
+		<script src='json.js' type='text/javascript'></script>
+		<script src='main.js' type='text/javascript'></script>
 	</body>
 
 </html>
