updated page init for #recentMem. Started load JSON function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<!--Eric Garcia
 		1306 SDI
-		Prject 3 -->
+		Prject 4 -->
 
 		<!-- Character Set Meta -->
 		<meta charset="utf-8">
@@ -68,7 +68,6 @@
 					</ul>
 				</div><!-- /Browse Memories -->
 			</article><!-- /Content -->
-
 		</section><!-- /Home -->
 
 		<!-- Add Item Page -->
@@ -172,8 +171,7 @@
 
 					<a href="#addItemErrors" id="errorLink" data-rel="dialog" data-transition="pop">Errors</a>
 				</form> <!-- /Form -->
-			</article><!-- /Content -->
-			
+			</article><!-- /Content -->		
 		</section><!-- /Add Item Page -->
 		
 		
@@ -227,7 +225,7 @@
 		
 		
 		<!-- About -->
-		<section data-role-"page" id="aboutUs">
+		<section data-role="page" id="aboutUs">
 
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
@@ -278,7 +276,6 @@
 					</div> <!-- /Credits -->
 				</div><!-- /Collapsible Set -->
 			</article> <!-- /Content -->
-		
 		</section> <!-- /About -->
 		
 
@@ -296,7 +293,6 @@
 					<li>Mood of Event</li>
 				</ul>
 			</article> <!-- /Content -->
-		
 		</section> <!-- /Error Page -->
 		
 		
