--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
 				<h2>Tap memory to edit</h2>
 				<!-- List of Memories -->
 				<ul data-role="listview" data-split-icon="delete" id="recentMemList" data-inset="true" data-filter="true" data-filter-placeholder="Search memories...">
-
-
-
+				<!-- Place holder for different data types to be loaded to page -->
 				</ul><!-- /List of Memories -->
 				<!-- Delete Individual Memory Button -->
 				<div data-role="popup" id="deleteMem" data-theme="b" data-overlay-theme="b" class="ui-content" style="max-width:340px; padding-bottom:2em;">
