--- a/Memory-Vault/app/_attachments/index.html
+++ b/Memory-Vault/app/_attachments/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<!--Eric Garcia
 		1306 SDI
-		Prject 3 -->
+		Prject 4 -->
 
 		<!-- Character Set Meta -->
 		<meta charset="utf-8">
@@ -17,10 +17,10 @@
 		<!-- jQuery Call -->
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
 		<!-- For some reason my local files are not loading properly -->
-		<!-- <link rel="stylesheet" href="css/lib/jquery.mobile-1.3.1.min.css" type='text/css' /> -->
-		<!-- <link rel="stylesheet" href="css/lib/jqudery.mobile.theme-1.3.1.min.css" type='text/css' /> -->
+		<!-- <link rel="stylesheet" href="jquery.mobile-1.3.1.min.css" type='text/css' /> -->
+		<!-- <link rel="stylesheet" href="jqudery.mobile.theme-1.3.1.min.css" type='text/css' /> -->
 		<!-- CSS Call -->
-		<link href="css/style.css" rel="stylesheet" type="text/css">
+		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
@@ -68,7 +68,6 @@
 					</ul>
 				</div><!-- /Browse Memories -->
 			</article><!-- /Content -->
-
 		</section><!-- /Home -->
 
 		<!-- Add Item Page -->
@@ -172,8 +171,7 @@
 
 					<a href="#addItemErrors" id="errorLink" data-rel="dialog" data-transition="pop">Errors</a>
 				</form> <!-- /Form -->
-			</article><!-- /Content -->
-			
+			</article><!-- /Content -->		
 		</section><!-- /Add Item Page -->
 		
 		
@@ -227,7 +225,7 @@
 		
 		
 		<!-- About -->
-		<section data-role-"page" id="aboutUs">
+		<section data-role="page" id="aboutUs">
 
 			<!-- Navigation Side Panel -->
 			<div data-role="panel" data-position="left" id="nav">
@@ -278,7 +276,6 @@
 					</div> <!-- /Credits -->
 				</div><!-- /Collapsible Set -->
 			</article> <!-- /Content -->
-		
 		</section> <!-- /About -->
 		
 
@@ -296,7 +293,6 @@
 					<li>Mood of Event</li>
 				</ul>
 			</article> <!-- /Content -->
-		
 		</section> <!-- /Error Page -->
 		
 		
@@ -304,9 +300,9 @@
 		<script src='http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js'></script>
 		<!-- jQuery js call -->
 		<!-- Not sure why the local libraries are not loading?!?! -->
-		<!-- <script src="js/lib/jquery-2.0.2.js" type="text/javascript"></script> -->
-		<!-- <script src="js/lib/jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
-		<!-- <script src='js/lib/jquery.validate.min.js' type='text/javascript'></script> -->
+		<!-- <script src="jquery-2.0.2.js" type="text/javascript"></script> -->
+		<!-- <script src="jquery.mobile-1.3.1.min.js" type="text/javascript"></script> -->
+		<!-- <script src='jquery.validate.min.js' type='text/javascript'></script> -->
 		<!-- js Call -->
 		<script src='json.js' type='text/javascript'></script>
 		<script src='main.js' type='text/javascript'></script>
