--- a/Memory-Vault/app/_attachments/index.html
+++ b/Memory-Vault/app/_attachments/index.html
@@ -19,6 +19,7 @@
 		<!-- For some reason my local files are not loading properly -->
 		<!-- <link rel="stylesheet" href="jquery.mobile-1.3.1.min.css" type='text/css' /> -->
 		<!-- <link rel="stylesheet" href="jqudery.mobile.theme-1.3.1.min.css" type='text/css' /> -->
+		<script src='jquery.couch.app.js' type='text/javascript'></script>
 		<!-- CSS Call -->
 		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
