--- a/Memory-Vault/app/_attachments/index.html
+++ b/Memory-Vault/app/_attachments/index.html
@@ -15,6 +15,7 @@
 		<!-- Page Title -->
 		<title>Memory Vault</title>
 		<!-- jQuery Call -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
 		<!-- For some reason my local files are not loading properly -->
 		<!-- <link rel="stylesheet" href="jquery.mobile-1.3.1.min.css" type='text/css' /> -->
